tests/valid/enum/no_payload_constructor.facet
enum BoolLike {
  Yes,
  No
}

fn yes() -> unrestricted BoolLike {
  BoolLike::Yes()
}
