tests/invalid/enum/match_branch_type_mismatch.facet
enum BoolLike {
  Yes,
  No
}

fn score(b: unrestricted BoolLike) -> unrestricted isize {
  match b {
    Yes => 1,
    No => true,
  }
}
